--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,18 @@ body {
     ;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+a:hover 
+{
+     color:rgb(165, 0, 198); 
+     text-decoration:none; 
+     cursor:pointer;  
+}
+
 button {
 	margin: 15px;
 }
@@ -20,6 +32,9 @@ hr {
     margin: 15px 0;
 }
 
+#gifCaption {
+    white-space: pre;
+}
 .gifsDisplay {
 	float: left;
 	margin: 5px;
